Validator: Added validation to dog routes
